--- a/.md
+++ b/.md
@@ -11,7 +11,7 @@ WHERE id NOT IN (
     ) AS temp
 );
 ```
-![image](https://github.com/KlagT/LeetCode/assets/90261661/4a20d89f-a296-4416-83bf-d670fd1cded8)
+![image](https://github.com/KlagT/LeetCode/assets/90261661/f40fb7bb-d4bb-4463-9701-558b5c1e386c)
 ---
 # 1934
 ---
@@ -48,7 +48,7 @@ WHERE id IN (
 );
 ```
 ---
-![image](https://github.com/KlagT/LeetCode/assets/90261661/98e3f3ec-3300-437e-bca7-7bd18ed408b7)
+![image](https://github.com/KlagT/LeetCode/assets/90261661/d7a41e65-0130-468a-9260-78c2c9b03a8c)
 # 184
 ---
 ```
@@ -73,7 +73,7 @@ ON
 AND 
     e.salary = max_salaries.max_salary;
 ```
-![image](https://github.com/KlagT/LeetCode/assets/90261661/7ab87334-cafe-4d0b-ba12-f11e81ac75f2)
+![image](https://github.com/KlagT/LeetCode/assets/90261661/0333a7b8-b2ea-4320-95a3-050ee5cd66d2)
 ---
 # 183
 ---
@@ -83,7 +83,7 @@ FROM Customers c
 LEFT JOIN Orders o ON c.id = o.customerId
 WHERE o.customerId IS NULL;
 ```
-![image](https://github.com/KlagT/LeetCode/assets/90261661/33ff8033-1701-494a-8afd-a3d5f27caa4d)
+![image](https://github.com/KlagT/LeetCode/assets/90261661/447cced0-e01c-48a7-b7a2-4df517d395de)
 ---
 # 182
 ---
@@ -91,7 +91,7 @@ WHERE o.customerId IS NULL;
 SELECT email as Email FROM Person  
 GROUP BY email HAVING COUNT(*) > 1;
 ```
-![image](https://github.com/KlagT/LeetCode/assets/90261661/3b966c38-e643-4683-a4cf-fb1a533fb0fc)
+![image](https://github.com/KlagT/LeetCode/assets/90261661/00059c10-5507-4bbf-8eba-af389fb17c03)
 ---
 # 181
 ---
@@ -99,7 +99,7 @@ GROUP BY email HAVING COUNT(*) > 1;
 SELECT e1.name AS Employee FROM Employee e1 
 JOIN Employee e2 ON e1.managerId = e2.Id AND e1.salary > e2.salary;
 ```
-![image](https://github.com/KlagT/LeetCode/assets/90261661/b3ce44aa-f4cd-4346-9355-74a938d7bdbd)
+![image](https://github.com/KlagT/LeetCode/assets/90261661/81af76ea-3b2b-40f5-8a65-426e31c47ef2)
 ---
 # 178
 ---
@@ -110,7 +110,7 @@ WHERE s.Score <= t.Score
 GROUP BY s.id, s.Score 
 ORDER BY s.Score DESC;
 ```
-![image](https://github.com/KlagT/LeetCode/assets/90261661/107a9b64-fc3e-4849-8b6c-b7c152ceb350)
+![image](https://github.com/KlagT/LeetCode/assets/90261661/ba0f7d6f-55de-4eaf-87f9-120bab29fb10)
 ---
 # 176
 ---
@@ -121,8 +121,10 @@ SELECT
      ORDER BY salary DESC
      LIMIT 1 OFFSET 1) AS SecondHighestSalary;
 ```
-![image](https://github.com/KlagT/LeetCode/assets/90261661/1eec8fc6-8621-4ac6-be69-0e929779bec6)
-![image](https://github.com/KlagT/LeetCode/assets/90261661/76a7f84a-a74b-4c73-a7f0-c8b363310b95)
+![image](https://github.com/KlagT/LeetCode/assets/90261661/0ae7cc50-df40-477b-9def-cb222dbcaebe)
+
+![image](https://github.com/KlagT/LeetCode/assets/90261661/72f4d8d7-ee1c-4bc9-bc15-8053c272907c)
+
 ---
 # 175
 ---
@@ -134,37 +136,37 @@ SELECT p.firstName,
 FROM Person p
 LEFT JOIN Address a ON p.personId = a.personId;
 ```
-![image](https://github.com/KlagT/LeetCode/assets/90261661/58c01ae1-3796-4218-8dfc-e117c319cbe4)
+![image](https://github.com/KlagT/LeetCode/assets/90261661/6ce434c3-88dd-4bf8-a662-6cfb468d5b3d)
+
 ---
 # 206
 ---
 ```
+# Definition for singly-linked list.
 class ListNode:
     def __init__(self, val=0, next=None):
         self.val = val
         self.next = next
 
-class Solution(object):
-    def reverseList(self, head):
-        """
-        Reverse a singly-linked list.
-
-        :type head: ListNode
-        :rtype: ListNode
-        """
+class Solution:
+    def reverseList(self, head: ListNode) -> ListNode:
         prev = None
-        current = head
+        curr = head
+        
+        while curr:
+            next_node = curr.next  # Store the next node
+            curr.next = prev       # Reverse the current node's pointer
+            prev = curr            # Move prev to the current node
+            curr = next_node       # Move to the next node in the list
+        
+        return prev  # prev will be the new head of the reversed list
 
-        while current is not None:
-            next_node = current.next
-            current.next = prev
-            prev = current
-            current = next_node
-
-        return prev
 
 ```
-![image](https://github.com/KlagT/LeetCode/assets/90261661/b97f7c73-5bd7-4378-9908-a2065b7a133d)
-![image](https://github.com/KlagT/LeetCode/assets/90261661/9ed75795-8612-4de1-9ef7-7b8b26e7a47f)
-![image](https://github.com/KlagT/LeetCode/assets/90261661/7e1342a2-0d4a-405b-8b51-5af084dd347c)
+![image](https://github.com/KlagT/LeetCode/assets/90261661/5ff62432-70fb-4554-ba97-1faa733888d1)
+
+![image](https://github.com/KlagT/LeetCode/assets/90261661/e302b5c7-b19d-4bdd-bb83-f6b2a92de4d7)
+
+![image](https://github.com/KlagT/LeetCode/assets/90261661/909d5089-827c-4f98-b004-8b67dc4ba684)
+
 
