--- a/.md
+++ b/.md
@@ -168,5 +168,141 @@ class Solution:
 ![image](https://github.com/KlagT/LeetCode/assets/90261661/e302b5c7-b19d-4bdd-bb83-f6b2a92de4d7)
 
 ![image](https://github.com/KlagT/LeetCode/assets/90261661/909d5089-827c-4f98-b004-8b67dc4ba684)
-
-
+---
+# 180
+---
+```
+SELECT DISTINCT num AS ConsecutiveNums
+FROM (
+    SELECT num,
+           LAG(num, 1) OVER (ORDER BY id) AS prev_num,
+           LEAD(num, 1) OVER (ORDER BY id) AS next_num
+    FROM Logs
+) AS subquery
+WHERE num = prev_num AND num = next_num;
+```
+![image](https://github.com/KlagT/LeetCode/assets/90261661/5f7c5cf9-f752-4835-9e7d-8e06507c7ca9)
+---
+# 197
+---
+```
+SELECT id
+FROM (
+    SELECT id, 
+           temperature, 
+           LAG(temperature) OVER (ORDER BY recordDate) AS prev_temperature
+    FROM Weather
+) AS subquery
+WHERE temperature > prev_temperature;
+```
+![image](https://github.com/KlagT/LeetCode/assets/90261661/07632af6-2ddb-4101-b86f-f5b0bd658d58)
+# 511
+---
+```
+SELECT player_id, MIN(event_date) AS first_login
+FROM Activity
+GROUP BY player_id;
+```
+![image](https://github.com/KlagT/LeetCode/assets/90261661/9ed4c351-008c-4358-8313-68203f6e4f52)
+---
+# 577
+---
+```
+SELECT e.name, b.bonus
+FROM Employee e
+LEFT JOIN Bonus b ON e.empId = b.empId
+WHERE b.bonus < 1000 OR b.bonus IS NULL;
+```
+![image](https://github.com/KlagT/LeetCode/assets/90261661/e50d0c0a-841c-4e35-8e77-b7c71499ebc3)
+---
+# 584
+---
+```
+SELECT c1.name
+FROM Customer c1
+LEFT JOIN Customer c2 ON c1.referee_id = c2.id
+WHERE c2.id != 2 OR c2.id IS NULL;
+```
+![image](https://github.com/KlagT/LeetCode/assets/90261661/0eaa0496-2897-44b0-8c7d-39a1a4e3b6db)
+---
+# 585
+---
+```
+SELECT ROUND(SUM(tiv_2016), 2) AS tiv_2016
+FROM Insurance
+WHERE tiv_2015 IN (
+    SELECT tiv_2015
+    FROM Insurance
+    GROUP BY tiv_2015
+    HAVING COUNT(*) > 1
+)
+AND (lat, lon) NOT IN (
+    SELECT lat, lon
+    FROM (
+        SELECT lat, lon, COUNT(*) AS count
+        FROM Insurance
+        GROUP BY lat, lon
+    ) AS subquery
+    WHERE count > 1
+);
+```
+![image](https://github.com/KlagT/LeetCode/assets/90261661/827d81db-d07d-4519-a53c-6da3fbdafe2b)
+---
+# 602
+---
+```
+SELECT id, num
+FROM (
+    SELECT id, 
+           COUNT(*) AS num
+    FROM (
+        SELECT requester_id AS id
+        FROM RequestAccepted
+        UNION ALL
+        SELECT accepter_id AS id
+        FROM RequestAccepted
+    ) AS subquery
+    GROUP BY id
+    ORDER BY num DESC
+    LIMIT 1
+) AS result;
+```
+![image](https://github.com/KlagT/LeetCode/assets/90261661/e0511ccb-71ab-4096-bb65-327b6a5d6ec7)
+---
+# 608
+---
+```
+SELECT
+    id,
+    CASE
+        WHEN p_id IS NULL THEN 'Root'
+        WHEN id IN (SELECT DISTINCT p_id FROM Tree) THEN 'Inner'
+        ELSE 'Leaf'
+    END AS type
+FROM
+    Tree;
+```
+![image](https://github.com/KlagT/LeetCode/assets/90261661/933c7786-3c4f-4199-a753-3d027bd893cb)
+![image](https://github.com/KlagT/LeetCode/assets/90261661/31c7f3b7-be78-4f0b-bc16-d3ec26a0f5cc)
+---
+# 626
+---
+```
+WITH SeatSwap AS (
+    SELECT 
+        id,
+        student,
+        CASE 
+            WHEN id % 2 = 0 THEN id - 1
+            WHEN id % 2 != 0 AND id != (SELECT MAX(id) FROM Seat) THEN id + 1
+            ELSE id
+        END AS swapped_id
+    FROM Seat
+)
+SELECT 
+    swapped_id AS id,
+    student
+FROM SeatSwap
+ORDER BY id;
+```
+![image](https://github.com/KlagT/LeetCode/assets/90261661/5950a8c5-7f68-4c2a-a954-e700b3784821)
